--- a/paddleapex/api_tracer/configs/op_target.yaml
+++ b/paddleapex/api_tracer/configs/op_target.yaml
@@ -850,7 +850,7 @@ target_op:
   -  paddle.incubate.nn.functional.fused_multi_head_attention
   -  paddle.incubate.nn.functional.fused_feedforward
   -  paddle.incubate.nn.functional.fused_multi_transformer
-  -  paddle.incubalte.nn.functional.fused_linear
+  -  paddle.incubate.nn.functional.fused_linear
   -  paddle.incubate.nn.functional.fused_linear_activation
   -  paddle.incubate.nn.functional.fused_bias_dropout_residual_layer_norm
   -  paddle.incubate.nn.functional.fused_ec_moe
