fix split command

--- a/paddleapex/api_tracer/configs/op_target.yaml
+++ b/paddleapex/api_tracer/configs/op_target.yaml
@@ -194,7 +194,6 @@ target_op:
   -  paddle.combinations
   -  paddle.concat
   -  paddle.conj
-  -  paddle.corrcoef
   -  paddle.copysign
   -  paddle.copysign_
   -  paddle.cos
@@ -267,7 +266,7 @@ target_op:
   -  paddle.greater_than_
   -  paddle.heaviside
   -  paddle.histogram
-  -  paddle.histogramadd
+  -  paddle.histogramdd
   -  paddle.hsplit
   -  paddle.hstack
   -  paddle.hypot
@@ -489,7 +488,7 @@ target_op:
   -  paddle.Tensor.__mul__
   -  paddle.Tensor.__ne__
   -  paddle.Tensor.__neg__
-  -  paddle.Tensor.__nonezero__
+  -  paddle.Tensor.__nonzero__
   -  paddle.Tensor.__or__
   -  paddle.Tensor.__pow__
   -  paddle.Tensor.__radd__
@@ -636,9 +635,8 @@ target_op:
   -  paddle.Tensor.greater_than_
   -  paddle.Tensor.heaviside
   -  paddle.Tensor.histogram
-  -  paddle.Tensor.histogramadd
+  -  paddle.Tensor.histogramdd
   -  paddle.Tensor.hsplit
-  -  paddle.Tensor.hstack
   -  paddle.Tensor.hypot
   -  paddle.Tensor.hypot_
   -  paddle.Tensor.i0
@@ -856,7 +854,7 @@ target_op:
   -  paddle.incubate.nn.functional.fused_ec_moe
   -  paddle.incubate.nn.functional.fused_dropout_add
   -  paddle.incubate.nn.functional.fused_rotary_position_embedding
-  -  paddle.incubate.nn.functional..variable_length_memory_efficient_attention
+  -  paddle.incubate.nn.functional.variable_length_memory_efficient_attention
   -  paddle.incubate.nn.functional.fused_rms_norm
   -  paddle.incubate.nn.functional.fused_layer_norm
   -  paddle.incubate.nn.functional.masked_multihead_attention
