--- a/paddleapex/api_tracer/configs/op_target.yaml
+++ b/paddleapex/api_tracer/configs/op_target.yaml
@@ -840,9 +840,9 @@ target_op:
   -  paddle.Tensor.where_
   -  paddle.Tensor.zero_
   #### experiment op:
-  -  paddle.distributed.fleet.layers.mpu.mp_ops._c_identity
-  -  paddle.distributed.fleet.layers.mpu.mp_ops._c_lookup_table
-  -  paddle.distributed.fleet.layers.mpu.mp_ops._c_softmax_with_cross_entropy
+  # -  paddle.distributed.fleet.layers.mpu.mp_ops._c_identity
+  # -  paddle.distributed.fleet.layers.mpu.mp_ops._c_lookup_table
+  # -  paddle.distributed.fleet.layers.mpu.mp_ops._c_softmax_with_cross_entropy
   -  paddle._C_ops.fused_gemm_epilogue
   -  paddle._legacy_C_ops.fused_gemm_epilogue
   -  paddle.incubate.nn.functional.fused_multi_head_attention
