--- a/paddleapex/api_tracer/configs/tool_config.yaml
+++ b/paddleapex/api_tracer/configs/tool_config.yaml
@@ -12,5 +12,9 @@ Async_dump: False
 # mode must be chosen from ["real_data", "random"]
 dump_mode: "random"
 
+# acclerate dump process by getting extremum value on device side.
+# In profile_mode, the speed of dump is 75% of vanilla speed.
+profile_mode: True
+
 # target_step is a list, dump api function will turn on at the specific step
 target_step: [0]
