--- a/paddleapex/api_tracer/configs/tool_config.yaml
+++ b/paddleapex/api_tracer/configs/tool_config.yaml
@@ -18,3 +18,6 @@ profile_mode: True
 
 # target_step is a list, dump api function will turn on at the specific step
 target_step: [0]
+
+# Remove duplicate apis from dump_info and keep only one api in the same value range.
+dump_unique: True
