support distributed op

--- a/paddleapex/api_tracer/configs/tool_config.yaml
+++ b/paddleapex/api_tracer/configs/tool_config.yaml
@@ -10,17 +10,19 @@ remote_path: "/root/paddlejob/workspace/PaddleAPEX_dump/"
 Async_dump: False
 
 # mode must be chosen from ["real_data", "random"]
-dump_mode: "random"
+dump_mode: "real_data"
+# dump_mode: "random"
 
 # acclerate dump process by getting extremum value on device side.
 # In profile_mode, the speed of dump is 75% of vanilla speed.
 profile_mode: True
 
 # target_step is a list, dump api function will turn on at the specific step
-target_step: [0]
+target_step: [5]
 
 # Remove duplicate apis from dump_info and keep only one api in the same value range.
-dump_unique: True
+# dump_unique: True
+dump_unique: False
 
 # Split dump_info into half-precision operators and other operators when saving json files
 split_dump: True
